# ideen-ingest-channel-fixed

./: .gitignore  AUTONOMY_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE-SETUP.md  Caddyfile-cloudflare  Caddyfile-cloudflare-fixed  Caddyfile-http-test  Caddyfile-port8080  Caddyfile-simple  DOMAIN-SETUP.md  EMERGENCY_MANUAL.sh  MONITORING_GUIDE.md  ORCHESTRATOR_README.md  RAILWAY-DEPLOYMENT.md  RAILWAY-UI-GUIDE.md  README.md  SIMULATION-RESULTS.md  SSH-DEPLOYMENT.md  SSH-GRAPH-ACCESS.md  SSH-SETUP-SIMPLE.md  SYSTEM-VALIDATION-REPORT.md  autonomy_watchdog.py  build-prod.sh  change-ssh-port.sh  check-dns.sh  deploy.sh  docker-compose.test.yml  enhanced-monitoring.sh  find-docker-port80.sh  fix-caddy-cloudflare.sh  fix-caddy-final.sh  fix-caddy-port80.sh  fix-caddy-port8080.sh  fix-caddy.sh  fix-tailscale.sh  gbrain-obsidian-sync.js  ideen-ingest-backend.service  monitor_outputs.sh  nixpacks.toml  (+17 more)
.claude/commands/: black-fallout-fix.md  changelog-iter-entry.md  sunset-issue-bulk.md
.devin/: config.local.json
.github/workflows/: ci-deep.yml  ci-fast.yml
backend/: .env.example  README.md  SLACK_SETUP.md  alembic.ini  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_slack_tables.py  88279a707466_create_slack_tables.py
backend/src/: kanban_data.json  main.py
backend/src/api/: agents.py  graph.py  ideas.py  ingest.py  kanban.py  semantic.py  slack.py  status.py
backend/src/core/: config.py
backend/src/models/: __init__.py  base.py  slack_channels.py  slack_files.py  slack_messages.py  slack_users.py
backend/src/services/: file_watcher.py  gbrain_service.py  kanban_sync.py  semantic_analysis.py  slack_service.py
backend/tests/: test_agents_api.py  test_models_slack_channels.py  test_models_slack_files.py  test_models_slack_messages.py  test_models_slack_users.py  test_slack.py
backend/tests/_helpers/: race.py  rls.py  slack.py
backend/tests/integration/: test_slack.py
backend/tests/unit/: test_slack_init.py  test_slack_service.py  test_slack_sig.py
docs/: IMPLEMENTATION_PLAN_TDD.md  IMPLEMENTATION_PLAN_TDD_v2_findings.md  slack-integration-implementation-plan.md  slack-integration-spec.md  slack-integration.md  sprint-1-slack-app-setup.md  sprint-2-database-backend-foundation.md  sprint-2-start-checklist.md
docs/adr/: ADR-004-sqlalchemy-2-alembic.md  ADR-005-arq-redis-worker-queue.md  ADR-006-ws-postgres-source-redis-streams-fanout.md  ADR-007-auth-jwt-then-magic-link.md  ADR-008-embeddings-sentence-transformers-pinned.md  ADR-009-llm-anthropic-with-vcr.md  ADR-010-deploy-railway-centric.md  ADR-011-obsidian-git-sync-singleton-writer.md  ADR-012-tdd-hybrid-style.md  (+6 more)
frontend/: eslint.config.js  nixpacks.toml  package-lock.json  package.json  railway.json  vite.config.ts  vitest.config.ts
mcp/ideen-channel/: .gitignore  README.md  pyproject.toml  run_server.py  setup.py
mcp/ideen-channel/ideen_channel/: __init__.py  cache.py  mocks.py  rate_limiter.py
mcp/ideen-channel/src/ideen_channel/: client.py  config.py  server.py
mcp/ideen-channel/src/tests/: __init__.py  test_client_mock.py  test_rate_limiter.py
mcp/ideen-channel/tests/: test_cache.py  test_config.py
scripts/: check_reviewer_chain.sh
(+22 files in other folders)
