[project]
name = "ideen-ingest-backend"
version = "0.1.0"
description = "SSH-zugänglicher Ideen-Eingangskanal mit GBrain-Integration"
authors = [{name = "Ben Poersch"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "slack-sdk>=3.27.0",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "black>=26.5.1",
    "diff-cover>=9.0",
    "freezegun>=1.5",
    "httpx>=0.27",
    "mutmut>=2.5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "respx>=0.21",
    "schemathesis>=3.36",
    "vcrpy>=6",
]
