[project]
name = "ideen-channel"
version = "0.1.0"
description = "MCP Server for Ideen Channel integration with WUPHF"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]